AUTH_DEBUG.txt
== TYPECHECK ==

> openmarket-tr@0.0.0 typecheck
> npm run typegen && tsc -b


> openmarket-tr@0.0.0 typegen
> wrangler types && react-router typegen


 ⛅️ wrangler 4.110.0
────────────────────
Generating project types...

interface __BaseEnv_Env {
	PRIVATE_DOCUMENTS: R2Bucket;
	BACKGROUND_JOBS: Queue;
	APP_ENV: "local";
	COMMIT_SHA: "local";
}
declare namespace Cloudflare {
	interface GlobalProps {
		mainModule: typeof import("./workers/app");
	}
	interface Env extends __BaseEnv_Env {}
}
interface Env extends __BaseEnv_Env {}
type StringifyValues<EnvType extends Record<string, unknown>> = {
	[Binding in keyof EnvType]: EnvType[Binding] extends string ? EnvType[Binding] : string;
};
declare namespace NodeJS {
	interface ProcessEnv extends StringifyValues<Pick<Cloudflare.Env, "APP_ENV" | "COMMIT_SHA">> {}
}

Generating runtime types...

Runtime types generated.


✨ Types written to worker-configuration.d.ts

📖 Read about runtime types
https://developers.cloudflare.com/workers/languages/typescript/#generate-types
📣 Remember to rerun 'wrangler types' after you change your wrangler.jsonc file.

app/routes/auth.login.tsx(54,30): error TS2339: Property 'errors' does not exist on type 'never'.
app/routes/auth.login.tsx(77,39): error TS2339: Property 'values' does not exist on type 'never'.
app/routes/auth.register.tsx(61,30): error TS2339: Property 'errors' does not exist on type 'never'.
app/routes/auth.register.tsx(62,30): error TS2339: Property 'values' does not exist on type 'never'.

== MIGRATE ==

> openmarket-tr@0.0.0 db:migrate
> drizzle-kit migrate

No config path provided, using default 'drizzle.config.ts'
Reading config file '/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/drizzle.config.ts'
Using 'pg' driver for database querying
[⣷] applying migrations...[2K[1G[✓] migrations applied successfully!
== REGISTRATION ==

> openmarket-tr@0.0.0 db:verify:registration
> tsx scripts/verify-registration-flow.ts

node:internal/modules/run_main:107
    triggerUncaughtException(
    ^

AssertionError [ERR_ASSERTION]: A preference constraint failure must reject the whole registration transaction.
    at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async <anonymous> (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/scripts/verify-registration-flow.ts:68:3) {
  generatedMessage: false,
  code: 'ERR_ASSERTION',
  actual: DrizzleQueryError: Failed query: insert into "user_preferences" ("user_id", "country", "preferred_language", "intended_use", "created_at", "updated_at") values ($1, $2, $3, $4, default, default)
  params: 335d011d-bff0-495a-a7f3-c8bff5c77573,X,en,buyer
      at NodePgPreparedQuery.queryWithCache (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/node_modules/src/pg-core/session.ts:73:11)
      at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
      at async <anonymous> (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/app/lib/auth/registration.server.ts:83:7)
      ... 4 lines matching cause stack trace ...
      at async <anonymous> (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/scripts/verify-registration-flow.ts:68:3) {
    query: 'insert into "user_preferences" ("user_id", "country", "preferred_language", "intended_use", "created_at", "updated_at") values ($1, $2, $3, $4, default, default)',
    params: [ '335d011d-bff0-495a-a7f3-c8bff5c77573', 'X', 'en', 'buyer' ],
    cause: error: new row for relation "user_preferences" violates check constraint "user_preferences_country_length_check"
        at /home/runner/work/openmarket.tr_v1/openmarket.tr_v1/node_modules/pg/lib/client.js:652:17
        at process.processTicksAndRejections (node:internal/process/task_queues:104:5)
        at async <anonymous> (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/node_modules/src/node-postgres/session.ts:149:14)
        at async NodePgPreparedQuery.queryWithCache (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/node_modules/src/pg-core/session.ts:71:12)
        at async <anonymous> (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/app/lib/auth/registration.server.ts:83:7)
        at async NodePgSession.transaction (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/node_modules/src/node-postgres/session.ts:259:19)
        at async withDatabase (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/app/lib/db/client.server.ts:20:12)
        at async waitForActual (node:assert:646:5)
        at async strict.rejects (node:assert:769:25)
        at async <anonymous> (/home/runner/work/openmarket.tr_v1/openmarket.tr_v1/scripts/verify-registration-flow.ts:68:3) {
      length: 371,
      severity: 'ERROR',
      code: '23514',
      detail: 'Failing row contains (335d011d-bff0-495a-a7f3-c8bff5c77573, X, en, buyer, 2026-07-12 18:07:26.842845+00, 2026-07-12 18:07:26.842845+00).',
      hint: undefined,
      position: undefined,
      internalPosition: undefined,
      internalQuery: undefined,
      where: undefined,
      schema: 'public',
      table: 'user_preferences',
      column: undefined,
      dataType: undefined,
      constraint: 'user_preferences_country_length_check',
      file: 'execMain.c',
      line: '2074',
      routine: 'ExecConstraints'
    }
  },
  expected: /user_preferences_country_length_check/,
  operator: 'rejects',
  diff: 'simple'
}

Node.js v24.18.0

statuses: type=2 migrate=0 registration=1
